Fixes every onClick event inside the entity card (FastAction, Jumpbutton) to prevent bubbling the event to parent

--- a/cdap-ui/app/cdap/components/EntityCard/EntityCard.less
+++ b/cdap-ui/app/cdap/components/EntityCard/EntityCard.less
@@ -23,15 +23,7 @@
   text-align: left;
   border-radius: 0;
 
-  &.artifact .card-header { background-color: #bdc3c7; }
-  &.application .card-header { background-color: #ff6600; }
-  &.datasetinstance .card-header { background-color: #27ae60; }
-  &.stream .card-header { background-color: #3498db; }
-  &.view .card-header { background-color: #1abc9c; }
-  &.program .card-header { background-color: #2c3e50; }
-
   .card-header {
-    justify-content: flex-start;
     border-bottom: @entity-card-border;
     color: white;
   }
@@ -93,7 +85,6 @@
         margin-bottom: 5px;
         font-size: 15px;
         color: #333333;
-        font-weight: 500;
       }
       .metric-header {
         font-weight: 500;
