--- a/cdap-ui/app/cdap/components/EntityCard/EntityCardHeader/EntityCardHeader.less
+++ b/cdap-ui/app/cdap/components/EntityCard/EntityCardHeader/EntityCardHeader.less
@@ -15,8 +15,8 @@
  */
 
 .entity-card-header {
-  margin-left: 10px;
-
+  padding-left: 10px;
+  width: 100%;
   h4 {
     line-height: 15px;
     margin-top: 5px;
@@ -27,4 +27,10 @@
   }
 
   .entity-type { margin-left: 5px; }
+  &.artifact { background-color: #bdc3c7; }
+  &.application { background-color: #ff6600; }
+  &.datasetinstance { background-color: #27ae60; }
+  &.stream { background-color: #3498db; }
+  &.view { background-color: #1abc9c; }
+  &.program { background-color: #2c3e50; }
 }
